# wasm-template

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  webpack.config.js
.cargo/: config.toml
src/: index.html  index.js  lib.rs  style.scss
